# strava_merger

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  token_refresh.py
schemas/: activity.py
scripts/: merger.py  token_refresh.py  upload.py
strava_utils/: __init__.py  domain.py  service.py
testfiles/: Afternoon_Ride.gpx  Morning_Ride.gpx  merged_output.gpx
utils/: __init__.py  domain.py  merge_helpers.py  service.py  strava_client.py  strava_helpers.py
